--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "react-router-dom": "^6.14.1"
     },
     "devDependencies": {
+        "@21st-extension/react": "^0.5.14",
+        "@21st-extension/toolbar-react": "^0.5.14",
         "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.24",
